# rust-api-demo-seaorm

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  sea_orm_active_enums.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: main.rs  settings.rs  startup.rs  telemetry.rs
src/routes/: account.rs  mod.rs
