[package]
name = "rust-api-demo-seaorm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[workspace]
members = [".", "entity", "migration", "service"]

[dependencies]
actix-web = "4.9.0"
config = { version = "0.14.0", features = ["yaml"] }
dotenv = "0.15.0"
sea-orm = { version = "1.1.0", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0.211"
# sqlx = { version = "0.8.2", features = ["uuid", "chrono", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter", "registry", "json", "tracing-log"] }
log = "0.4.22"
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }
serde_json = "1.0.132"
